--- a/exemplosTextos.html
+++ b/exemplosTextos.html
@@ -33,6 +33,11 @@
     <p>Texto citado: <q>Esta é uma citação curta.</q></p>
     
     <h2>Citação longa</h2>
-    <p>Texto citado: <blockquote cite="https://www.example.com/source">Esta é uma citação longa.</blockquote></p>
+    <p>Texto citado:
+        <blockquote>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse eligendi eius cumque blanditiis iste perspiciatis commodi, facere sequi quidem dolores, in laborum beatae ipsum id ullam eaque placeat nemo consequatur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore beatae reiciendis corporis voluptatibus provident fugiat velit placeat! Odio itaque eaque natus, repellat velit veritatis dolorum esse, rerum laboriosam, nostrum iusto.</p>
+        </blockquote>
+    </p>
 </body>
 </html>
