--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <nav>
-                        <a href="#electronics" class="text-white mx-2">Eletronicos</a>
-                        <a href="#computers" class="text-white mx-2">Computadores</a>
-                        <a href="#accessories" class="text-white mx-2">Acessorios</a>
+                        <a href="/index.html" class="text-white mx-2">Index</a>
+                        <a href="/sobre.html" class="text-white mx-2">Sobre</a>
+                        <a href="/contato.html" class="text-white mx-2">Contato</a>
                     </nav>
                 </div>
                 <div class="col-md-4 text-end">
